# oguraPoemsGenerator

./: .gitignore  README.md  display.py  ogura.json  poems.json  pyproject.toml
src/ogura/: __init__.py  __main__.py  display.py
