[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[project]
name = "ogura"
version = "0.0.2"
authors = [
    { name="Arjun Vishanth", email="arjunvishanth@gmail.com" },
]
description = "A script that randomly displays one of the Hundred Ogura Poems."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.utils]
"Homepage" = "https://github.com/jun6000/ogurapoemsgenerator"
